Project structure for 0.1.0 (#1)